fixed feature image size and spacing

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -84,8 +84,8 @@
   gap: 1rem;
 
   img {
-    width: 75%;
-    height: 75%;
+    width: 90%;
+    height: 25rem;
   }
 
   button {
